Simple Cache: avoid extraneous stream 0 (http header) writes.

These writes were not only wasteful, but they could cause corruption
if the existing EOF record didn't have a key SHA256; the new key
SHA256 would overwrite the existing one corrupting the entry.

BUG=615440
R=juliatuttle@chromium.org,rdsmith@chromium.org

Review-Url: https://codereview.chromium.org/2015263002
Cr-Commit-Position: refs/heads/master@{#396533}

Former-commit-id: 6b66971b761a15a67982bef692619a96f306150d